# mcp-server-box

./: README.md  pyproject.toml
src/: box_tools_ai.py  box_tools_docgen.py  box_tools_files.py  box_tools_folders.py  box_tools_generic.py  box_tools_metadata.py  box_tools_search.py  mcp_server_box.py  server_context.py
tests/: conftest.py  test_box_auth.py  test_box_tools_ai.py  test_box_tools_ai_deprecated.py  test_box_tools_docgen.py  test_box_tools_files.py  test_box_tools_folders.py  test_box_tools_generic.py  test_box_tools_metadata.py  test_box_tools_search.py  test_mcp_server_box.py  test_server_context.py
tests/test_box_ai_toolkit/: test_box_api_ai.py  test_box_api_read.py  test_box_api_search.py
tests/test_files/: HAB-1-01.docx
