[project]
name = "mcp-server-box"
version = "0.1.1"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "box-ai-agents-toolkit>=0.0.44",
    "fastapi>=0.115.14",
    "mcp[cli]>=1.10.1",
    "python-dotenv>=1.1.1",
]

[dependency-groups]
dev = ["pytest>=8.3.5", "pytest-asyncio>=0.26.0", "pytest-cov>=6.1.0"]

[tool.pytest.ini_options]
pythonpath = [".", "src"]
